@@ -1,3 +1,8 @@
+2008-08-30	Jannis Pohlmann <jannis@xfce.org>
+
+	* autogen.sh: Do not print errors when trying to detect the 
+	  revision of a git svn repository.
+
 2008-08-25	Brian Tarricone <kelnos@xfce.org>
 
 	* exo-helper/exo-preferred-applications.desktop.in: Include
